[gd_scene load_steps=2 format=3 uid="uid://sg3d01krkqi2"]

[ext_resource type="Script" uid="uid://cs5bijdh6jem6" path="res://scenes/cardsystem/card_ui.gd" id="1_jeqkj"]

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(100, 141)
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 141.0
script = ExtResource("1_jeqkj")

[node name="Background" type="Panel" parent="."]
custom_minimum_size = Vector2(100, 141)
layout_mode = 0
offset_right = 100.0
offset_bottom = 141.0
mouse_filter = 2

[node name="CardImage" type="TextureRect" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 28.0
offset_top = 26.0
offset_right = 73.0
offset_bottom = 66.0
mouse_filter = 2

[node name="Name" type="Label" parent="."]
custom_minimum_size = Vector2(80, 20)
layout_mode = 0
offset_left = 18.0
offset_top = 3.0
offset_right = 98.0
offset_bottom = 26.0

[node name="Cost" type="Label" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 0
offset_right = 20.0
offset_bottom = 23.0

[node name="Description" type="Label" parent="."]
custom_minimum_size = Vector2(80, 50)
layout_mode = 0
offset_left = 10.0
offset_top = 79.0
offset_right = 90.0
offset_bottom = 131.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
